--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "layoutlojajti",
+    "name": "douglas/lojajti",
     "type": "project",
     "description": "The Laravel Framework.",
     "keywords": [
