--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "douglas/lojajti",
+    "name": "douglas/lojavirtual",
     "type": "project",
     "description": "The Laravel Framework.",
     "keywords": [
@@ -11,7 +11,8 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+		 "Douglastkd/layoutloja":"dev-master@dev"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -21,6 +22,13 @@
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^7.5"
     },
+	
+	"repositories": [
+    {
+       "type": "vcs",
+       "url": "https://github.com/Douglastkd/layoutloja" 
+    }
+  ]
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
